--- a/Random Agent and Game handler.ipynb
+++ b/Random Agent and Game handler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,11 +84,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#N = 3\n",
+    "N = 3\n",
+    "\n",
+    "class Human_Agent(object):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    def gen_move(self,env):\n",
+    "        print(env)\n",
+    "        while True:\n",
+    "            cmd = input(\"input move (x, y) as 3*x=y (0-indexed):\")\n",
+    "            pos = int(cmd)\n",
+    "            if not pos in range(N*N):\n",
+    "                print(\"not in range(0, N*N)!!\")\n",
+    "                continue\n",
+    "            if not pos in env.valid_actions():\n",
+    "                print(\"occupied!!\")\n",
+    "                continue\n",
+    "            break\n",
+    "        return pos\n",
+    "            \n",
     "\n",
     "def softmax(x):\n",
     "    p = np.exp(x)\n",
@@ -160,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "4"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,6 +195,8 @@
    "source": [
     "ra1 = Random_Agent()\n",
     "ra2 = Random_Agent()\n",
+    "ha1 = Human_Agent()\n",
+    "ha2 = Human_Agent()\n",
     "env = Env(3)\n",
     "env.take_action(-1, 5)\n",
     "ra1.gen_move(env)"
@@ -184,37 +204,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(-1, [[1, 5], [-1, 0], [1, 6], [-1, 2], [1, 8], [-1, 1]])\n",
       "[['.' '.' '.']\n",
-      " ['.' '.' 'o']\n",
-      " ['.' '.' '.']]\n",
-      "[['x' '.' '.']\n",
-      " ['.' '.' 'o']\n",
-      " ['.' '.' '.']]\n",
-      "[['x' '.' '.']\n",
-      " ['.' '.' 'o']\n",
-      " ['o' '.' '.']]\n",
-      "[['x' '.' 'x']\n",
-      " ['.' '.' 'o']\n",
-      " ['o' '.' '.']]\n",
-      "[['x' '.' 'x']\n",
-      " ['.' '.' 'o']\n",
-      " ['o' '.' 'o']]\n",
-      "[['x' 'x' 'x']\n",
-      " ['.' '.' 'o']\n",
-      " ['o' '.' 'o']]\n"
+      " ['.' '.' '.']\n",
+      " ['.' '.' '.']]\n"
      ]
     }
    ],
    "source": [
-    "g = Game(ra1, ra2)\n",
+    "g = Game(ha1, ra1)\n",
     "playout1 = g.play()\n",
     "print(playout1)\n",
     "g.display_play(playout1)"
