--- a/Random Agent and Game handler.ipynb
+++ b/Random Agent and Game handler.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,52 @@
      "text": [
       "[['.' '.' '.']\n",
       " ['.' '.' '.']\n",
-      " ['.' '.' '.']]\n"
+      " ['.' '.' '.']]\n",
+      "input move (x, y) as 3*x=y (0-indexed):4\n",
+      "[['.' '.' '.']\n",
+      " ['.' 'o' '.']\n",
+      " ['.' '.' 'x']]\n",
+      "input move (x, y) as 3*x=y (0-indexed):0\n",
+      "[['o' '.' '.']\n",
+      " ['.' 'o' '.']\n",
+      " ['.' 'x' 'x']]\n",
+      "input move (x, y) as 3*x=y (0-indexed):6\n",
+      "[['o' '.' 'x']\n",
+      " ['.' 'o' '.']\n",
+      " ['o' 'x' 'x']]\n",
+      "input move (x, y) as 3*x=y (0-indexed):5\n",
+      "[['o' '.' 'x']\n",
+      " ['x' 'o' 'o']\n",
+      " ['o' 'x' 'x']]\n",
+      "input move (x, y) as 3*x=y (0-indexed):1\n",
+      "(0, [[1, 4], [-1, 8], [1, 0], [-1, 7], [1, 6], [-1, 2], [1, 5], [-1, 3], [1, 1]])\n",
+      "[['.' '.' '.']\n",
+      " ['.' 'o' '.']\n",
+      " ['.' '.' '.']]\n",
+      "[['.' '.' '.']\n",
+      " ['.' 'o' '.']\n",
+      " ['.' '.' 'x']]\n",
+      "[['o' '.' '.']\n",
+      " ['.' 'o' '.']\n",
+      " ['.' '.' 'x']]\n",
+      "[['o' '.' '.']\n",
+      " ['.' 'o' '.']\n",
+      " ['.' 'x' 'x']]\n",
+      "[['o' '.' '.']\n",
+      " ['.' 'o' '.']\n",
+      " ['o' 'x' 'x']]\n",
+      "[['o' '.' 'x']\n",
+      " ['.' 'o' '.']\n",
+      " ['o' 'x' 'x']]\n",
+      "[['o' '.' 'x']\n",
+      " ['.' 'o' 'o']\n",
+      " ['o' 'x' 'x']]\n",
+      "[['o' '.' 'x']\n",
+      " ['x' 'o' 'o']\n",
+      " ['o' 'x' 'x']]\n",
+      "[['o' 'o' 'x']\n",
+      " ['x' 'o' 'o']\n",
+      " ['o' 'x' 'x']]\n"
      ]
     }
    ],
@@ -226,17 +271,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class A(object):\n",
+    "    def __init__(self):\n",
+    "        self.a = 1\n",
+    "    def set_value(self, a):\n",
+    "        self.a = a"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = A()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 303,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = a\n",
+    "b.set_value(2)\n",
+    "a.a"
+   ]
   },
   {
    "cell_type": "code",
